remove lock file

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 !.yarn/plugins
 !.yarn/releases
 !.yarn/versions
+.yarn.lock
+.package-lock.json
 
 # testing
 /coverage
@@ -38,3 +40,4 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
