--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.461.0",
-    "next": "15.0.3",
+    "next": "^14.2.20",
     "prisma": "^5.22.0",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-hook-form": "^7.53.2",
     "react-quill-new": "^3.3.3",
     "sonner": "^1.7.0",
@@ -33,7 +33,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "15.0.3",
+    "eslint-config-next": "^14.2.20",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
