--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "eslint": "^9.17.0",
+    "eslint-config-next": "^15.1.1",
     "lucide-react": "^0.461.0",
     "next": "^14.2.20",
     "prisma": "^5.22.0",
+    "quill-delta": "^5.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.53.2",
@@ -32,8 +35,6 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "^14.2.20",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
